apps/causal-modeling/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: causal-modeling-backend
 namespace: causal-modeling
 labels:
    app: causal-modeling-backend
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: causal-modeling-backend
  template:
    metadata:
      labels:
        app: causal-modeling-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: causal-modeling-backend
        image: ghcr.io/curatimexai/causal-modeling-backend:d86b32ad588b1c459eaadde61ad68ef246043988

        ports:
        - containerPort: 8000
        startupProbe:
          tcpSocket:
            port: 8000
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 40
          periodSeconds: 10
